Add basic first-pass background preferences UI
This is the first step towards #80

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -112,10 +112,7 @@ BEGIN
     PUSHBUTTON      "Choose font...",IDC_FONT,120,12,192,18
     CONTROL         "",IDC_FOREGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,36,192,18,WS_EX_CLIENTEDGE
     CONTROL         "",IDC_HIGHLIGHT_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,60,192,20,WS_EX_CLIENTEDGE
-    CONTROL         "",IDC_BACKGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,84,192,18,WS_EX_CLIENTEDGE
     CONTROL         "Custom text colour",IDC_FOREGROUND_COLOUR_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,42,74,10
-    CONTROL         "Custom background colour",IDC_BACKGROUND_COLOUR_CUSTOM,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,90,101,10
     CONTROL         "Custom highlight colour",IDC_HIGHLIGHT_COLOUR_CUSTOM,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,89,10
     EDITTEXT        IDC_RENDER_LINEGAP_EDIT,50,243,40,12,ES_AUTOHSCROLL | ES_NUMBER
@@ -146,6 +143,31 @@ BEGIN
     CONTROL         "",IDC_EDIT_AUTOEDITS_AUTOMATED,"SysListView32",LVS_LIST | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,27,318,74
     LTEXT           "Auto-edits to run automatically when saving lyrics from remote sources:",IDC_STATIC,7,15,222,8
     GROUPBOX        "Auto-edits",IDC_STATIC,0,0,331,121
+END
+
+IDD_PREFERENCES_DISPLAY_BACKGROUND DIALOGEX 0, 0, 309, 177
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_BACKGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,110,7,192,18,WS_EX_CLIENTEDGE
+    CONTROL         "Custom background colour",IDC_BACKGROUND_COLOUR_CUSTOM,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,12,101,10
+    COMBOBOX        IDC_BACKGROUND_MODE,62,42,73,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Background fill:",IDC_STATIC,6,44,50,8
+    CONTROL         "",IDC_BACKGROUND_IMG_OPACITY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,105,87,100,15
+    LTEXT           "Background image opacity:",IDC_STATIC,6,89,87,8
+    LTEXT           "Image blur",IDC_STATIC,6,112,35,8
+    PUSHBUTTON      "Gradient TL",IDC_BACKGROUND_GRADIENT_TL,178,41,50,14
+    PUSHBUTTON      "Gradient TR",IDC_BACKGROUND_GRADIENT_TR,240,41,50,14
+    PUSHBUTTON      "Gradient BL",IDC_BACKGROUND_GRADIENT_BL,176,62,50,14
+    PUSHBUTTON      "Gradient BR",IDC_BACKGROUND_GRADIENT_BR,239,62,50,14
+    EDITTEXT        IDC_BACKGROUND_CUSTOM_IMG_PATH,77,133,144,14,ES_AUTOHSCROLL
+    LTEXT           "Custom image path",IDC_STATIC,6,135,62,8
+    PUSHBUTTON      "...",IDC_BACKGROUND_CUSTOM_IMG_BROWSE,229,134,18,14
+    CONTROL         "Maintain image aspect ratio",IDC_BACKGROUND_MAINTAIN_IMG_ASPECT_RATIO,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,66,103,10
+    CONTROL         "",IDC_BACKGROUND_BLUR_SPINNER,"msctls_updown32",UDS_ARROWKEYS,120,109,11,14
+    EDITTEXT        IDC_BACKGROUND_BLUR_EDIT,70,108,50,14,ES_AUTOHSCROLL
 END
 
 
@@ -188,6 +210,14 @@ BEGIN
         TOPMARGIN, 4
         BOTTOMMARGIN, 281
     END
+
+    IDD_PREFERENCES_DISPLAY_BACKGROUND, DIALOG
+    BEGIN
+        LEFTMARGIN, 6
+        RIGHTMARGIN, 302
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 170
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -213,6 +243,11 @@ BEGIN
 END
 
 IDD_PREFERENCES_EDIT AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_PREFERENCES_DISPLAY_BACKGROUND AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
