--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -152,15 +152,15 @@ BEGIN
     CONTROL         "",IDC_BACKGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,110,7,192,18,WS_EX_CLIENTEDGE
     CONTROL         "Custom background colour",IDC_BACKGROUND_COLOUR_CUSTOM,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,12,101,10
-    COMBOBOX        IDC_BACKGROUND_MODE,62,42,73,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_BACKGROUND_MODE,62,42,73,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Background fill:",IDC_STATIC,6,44,50,8
     CONTROL         "",IDC_BACKGROUND_IMG_OPACITY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,105,87,100,15
     LTEXT           "Background image opacity:",IDC_STATIC,6,89,87,8
     LTEXT           "Image blur",IDC_STATIC,6,112,35,8
-    PUSHBUTTON      "Gradient TL",IDC_BACKGROUND_GRADIENT_TL,178,41,50,14
-    PUSHBUTTON      "Gradient TR",IDC_BACKGROUND_GRADIENT_TR,240,41,50,14
-    PUSHBUTTON      "Gradient BL",IDC_BACKGROUND_GRADIENT_BL,176,62,50,14
-    PUSHBUTTON      "Gradient BR",IDC_BACKGROUND_GRADIENT_BR,239,62,50,14
+    CONTROL         "",IDC_BACKGROUND_GRADIENT_TL,"Button",BS_OWNERDRAW | WS_TABSTOP,178,41,50,14,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_BACKGROUND_GRADIENT_TR,"Button",BS_OWNERDRAW | WS_TABSTOP,240,41,50,14,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_BACKGROUND_GRADIENT_BL,"Button",BS_OWNERDRAW | WS_TABSTOP,176,62,50,14,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_BACKGROUND_GRADIENT_BR,"Button",BS_OWNERDRAW | WS_TABSTOP,239,62,50,14,WS_EX_CLIENTEDGE
     EDITTEXT        IDC_BACKGROUND_CUSTOM_IMG_PATH,77,133,144,14,ES_AUTOHSCROLL
     LTEXT           "Custom image path",IDC_STATIC,6,135,62,8
     PUSHBUTTON      "...",IDC_BACKGROUND_CUSTOM_IMG_BROWSE,229,134,18,14
@@ -168,6 +168,9 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,66,103,10
     CONTROL         "",IDC_BACKGROUND_BLUR_SPINNER,"msctls_updown32",UDS_ARROWKEYS,120,109,11,14
     EDITTEXT        IDC_BACKGROUND_BLUR_EDIT,70,108,50,14,ES_AUTOHSCROLL
+    LTEXT           "Background colour type:",IDC_STATIC,6,162,79,8
+    COMBOBOX        IDC_BACKGROUND_COLOUR_TYPE,95,156,122,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "Gradient Colours",IDC_STATIC,169,29,125,55
 END
 
 
