Add support for album art & custom background images

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -150,10 +150,8 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_BACKGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,110,7,192,18,WS_EX_CLIENTEDGE
-    CONTROL         "Custom background colour",IDC_BACKGROUND_COLOUR_CUSTOM,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,12,101,10
-    COMBOBOX        IDC_BACKGROUND_MODE,62,42,73,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Background fill:",IDC_STATIC,6,44,50,8
+    COMBOBOX        IDC_BACKGROUND_IMAGE_TYPE,71,42,73,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Background image:",IDC_STATIC,6,44,62,8
     CONTROL         "",IDC_BACKGROUND_IMG_OPACITY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,105,87,100,15
     LTEXT           "Background image opacity:",IDC_STATIC,6,89,87,8
     LTEXT           "Image blur",IDC_STATIC,6,112,35,8
@@ -168,8 +166,8 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,66,103,10
     CONTROL         "",IDC_BACKGROUND_BLUR_SPINNER,"msctls_updown32",UDS_ARROWKEYS,120,109,11,14
     EDITTEXT        IDC_BACKGROUND_BLUR_EDIT,70,108,50,14,ES_AUTOHSCROLL
-    LTEXT           "Background colour type:",IDC_STATIC,6,162,79,8
-    COMBOBOX        IDC_BACKGROUND_COLOUR_TYPE,95,156,122,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Background fill:",IDC_STATIC,6,7,50,8
+    COMBOBOX        IDC_BACKGROUND_FILL_TYPE,6,23,98,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     GROUPBOX        "Gradient Colours",IDC_STATIC,169,29,125,55
 END
 
