Make some final tweaks to the background preferences page layout
Closes #66, #80, #236

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -145,30 +145,33 @@ BEGIN
     GROUPBOX        "Auto-edits",IDC_STATIC,0,0,331,121
 END
 
-IDD_PREFERENCES_DISPLAY_BACKGROUND DIALOGEX 0, 0, 309, 177
+IDD_PREFERENCES_DISPLAY_BACKGROUND DIALOGEX 0, 0, 324, 266
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_BACKGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,110,7,192,18,WS_EX_CLIENTEDGE
-    COMBOBOX        IDC_BACKGROUND_IMAGE_TYPE,71,42,73,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Background image:",IDC_STATIC,6,44,62,8
-    CONTROL         "",IDC_BACKGROUND_IMG_OPACITY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,105,87,100,15
-    LTEXT           "Background image opacity:",IDC_STATIC,6,89,87,8
-    LTEXT           "Image blur",IDC_STATIC,6,112,35,8
-    CONTROL         "",IDC_BACKGROUND_GRADIENT_TL,"Button",BS_OWNERDRAW | WS_TABSTOP,178,41,50,14,WS_EX_CLIENTEDGE
-    CONTROL         "",IDC_BACKGROUND_GRADIENT_TR,"Button",BS_OWNERDRAW | WS_TABSTOP,240,41,50,14,WS_EX_CLIENTEDGE
-    CONTROL         "",IDC_BACKGROUND_GRADIENT_BL,"Button",BS_OWNERDRAW | WS_TABSTOP,176,62,50,14,WS_EX_CLIENTEDGE
-    CONTROL         "",IDC_BACKGROUND_GRADIENT_BR,"Button",BS_OWNERDRAW | WS_TABSTOP,239,62,50,14,WS_EX_CLIENTEDGE
-    EDITTEXT        IDC_BACKGROUND_CUSTOM_IMG_PATH,77,133,144,14,ES_AUTOHSCROLL
-    LTEXT           "Custom image path",IDC_STATIC,6,135,62,8
-    PUSHBUTTON      "...",IDC_BACKGROUND_CUSTOM_IMG_BROWSE,229,134,18,14
+    CONTROL         "",IDC_BACKGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,17,58,131,18,WS_EX_CLIENTEDGE
+    COMBOBOX        IDC_BACKGROUND_IMAGE_TYPE,57,132,95,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Image type:",IDC_STATIC,6,135,47,8
+    CONTROL         "",IDC_BACKGROUND_IMG_OPACITY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,106,156,185,15
+    LTEXT           "Background image opacity:",IDC_STATIC,6,159,87,8
+    LTEXT           "Image blur",IDC_STATIC,6,186,35,8
+    CONTROL         "",IDC_BACKGROUND_GRADIENT_TL,"Button",BS_OWNERDRAW | WS_TABSTOP,189,55,50,14,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_BACKGROUND_GRADIENT_TR,"Button",BS_OWNERDRAW | WS_TABSTOP,251,55,50,14,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_BACKGROUND_GRADIENT_BL,"Button",BS_OWNERDRAW | WS_TABSTOP,189,76,50,14,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_BACKGROUND_GRADIENT_BR,"Button",BS_OWNERDRAW | WS_TABSTOP,251,76,50,14,WS_EX_CLIENTEDGE
+    EDITTEXT        IDC_BACKGROUND_CUSTOM_IMG_PATH,78,210,144,14,ES_AUTOHSCROLL
+    LTEXT           "Custom image path",IDC_STATIC,6,213,62,8
+    PUSHBUTTON      "...",IDC_BACKGROUND_CUSTOM_IMG_BROWSE,226,210,20,15
     CONTROL         "Maintain image aspect ratio",IDC_BACKGROUND_MAINTAIN_IMG_ASPECT_RATIO,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,66,103,10
-    CONTROL         "",IDC_BACKGROUND_BLUR_SPINNER,"msctls_updown32",UDS_ARROWKEYS,120,109,11,14
-    EDITTEXT        IDC_BACKGROUND_BLUR_EDIT,70,108,50,14,ES_AUTOHSCROLL
-    LTEXT           "Background fill:",IDC_STATIC,6,7,50,8
-    COMBOBOX        IDC_BACKGROUND_FILL_TYPE,6,23,98,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Gradient Colours",IDC_STATIC,169,29,125,55
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,193,134,103,10
+    CONTROL         "",IDC_BACKGROUND_BLUR_SPINNER,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_HOTTRACK,97,184,11,14
+    EDITTEXT        IDC_BACKGROUND_BLUR_EDIT,48,183,50,14,ES_AUTOHSCROLL
+    LTEXT           "Fill type:",IDC_STATIC,6,23,42,8
+    COMBOBOX        IDC_BACKGROUND_FILL_TYPE,47,20,111,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "Gradient Colours",IDC_STATIC,181,42,125,55
+    GROUPBOX        "Custom solid colour",IDC_STATIC,6,42,152,55
+    GROUPBOX        "Background Image",IDC_STATIC,0,114,323,127
+    GROUPBOX        "Background colour",IDC_STATIC,0,0,323,100
 END
 
 
@@ -215,9 +218,9 @@ BEGIN
     IDD_PREFERENCES_DISPLAY_BACKGROUND, DIALOG
     BEGIN
         LEFTMARGIN, 6
-        RIGHTMARGIN, 302
+        RIGHTMARGIN, 317
         TOPMARGIN, 7
-        BOTTOMMARGIN, 170
+        BOTTOMMARGIN, 259
     END
 END
 #endif    // APSTUDIO_INVOKED
