Add metrics collection conclusions for Q2 2023

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ Release/
 .vs/
 
 releases/
+metrics/metrics_data/
 
 3rdparty/pugixml-1.12.1/scripts/vs2022/
 3rdparty/tidy-html5-5.8.0/cmakebuilddir/**/
