Add support for showing already-passed lyric lines in a different colour
Closes #178

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -109,10 +109,11 @@ IDD_PREFERENCES_DISPLAY DIALOGEX 0, 0, 333, 287
 STYLE DS_SETFONT | WS_CHILD
 FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
-    PUSHBUTTON      "Choose font...",IDC_FONT,120,12,192,18
-    CONTROL         "",IDC_FOREGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,36,192,18,WS_EX_CLIENTEDGE
-    CONTROL         "",IDC_HIGHLIGHT_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,60,192,20,WS_EX_CLIENTEDGE
-    CONTROL         "Custom text colour",IDC_FOREGROUND_COLOUR_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,42,74,10
+    PUSHBUTTON      "Choose font...",IDC_FONT,175,12,137,18
+    CONTROL         "",IDC_FOREGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,175,36,137,18,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_HIGHLIGHT_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,175,60,137,20,WS_EX_CLIENTEDGE
+    CONTROL         "Custom main text colour",IDC_FOREGROUND_COLOUR_CUSTOM,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,42,91,10
     CONTROL         "Custom highlight colour",IDC_HIGHLIGHT_COLOUR_CUSTOM,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,89,10
     EDITTEXT        IDC_RENDER_LINEGAP_EDIT,50,243,40,12,ES_AUTOHSCROLL | ES_NUMBER
@@ -134,6 +135,9 @@ BEGIN
     LTEXT           "Highlight fade time",IDC_STATIC,7,217,59,8
     CONTROL         "",IDC_DISPLAY_HIGHLIGHT_FADE_TIME,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,83,214,229,15
     CTEXT           "Static",IDC_DISPLAY_HIGHLIGHT_FADE_TIME_PREVIEW,83,231,229,8
+    CONTROL         "",IDC_PAST_FOREGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,175,84,137,20,WS_EX_CLIENTEDGE
+    LTEXT           "Past text colour",IDC_STATIC,12,90,50,8
+    COMBOBOX        IDC_PAST_FOREGROUND_COLOUR_TYPE,68,89,96,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_PREFERENCES_EDIT DIALOGEX 0, 0, 332, 288
