Add configuration for horizontal text alignment
Closes #260

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -136,6 +136,8 @@ BEGIN
     CONTROL         "",IDC_PAST_FOREGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,175,84,137,20,WS_EX_CLIENTEDGE
     LTEXT           "Past text colour",IDC_STATIC,12,90,50,8
     COMBOBOX        IDC_PAST_FOREGROUND_COLOUR_TYPE,68,89,96,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_TEXT_ALIGNMENT,249,243,65,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Text alignment:",IDC_STATIC,193,244,49,8
 END
 
 IDD_PREFERENCES_EDIT DIALOGEX 0, 0, 332, 288
