--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -78,23 +78,12 @@ FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
     RTEXT           "Save method:",IDC_STATIC,7,6,45,11
     COMBOBOX        IDC_SAVE_METHOD_COMBO,59,4,92,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_SAVE_FILENAME_FORMAT,90,162,199,14,ES_AUTOHSCROLL
-    LTEXT           "Static",IDC_SAVE_FILE_NAME_PREVIEW,89,180,144,8,SS_ENDELLIPSIS
-    RTEXT           "File name format:",IDC_STATIC,27,165,59,10
-    GROUPBOX        "Local Files",IDC_STATIC,0,150,331,107
-    COMBOBOX        IDC_SAVE_DIRECTORY_CLASS,90,202,199,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    RTEXT           "Storage directory:",IDC_STATIC,14,204,71,8
-    LTEXT           "Custom directory format:",IDC_STATIC,10,226,79,8
-    EDITTEXT        IDC_SAVE_CUSTOM_PATH,89,223,200,14,ES_AUTOHSCROLL
-    LTEXT           "Static",IDC_SAVE_CUSTOM_PATH_PREVIEW,90,244,202,8,SS_PATHELLIPSIS
-    PUSHBUTTON      "...",IDC_SAVE_CUSTOM_PATH_BROWSE,292,223,20,15
     CONTROL         "Note: The corresponding source will be searched even if it is not configured as active.",IDC_STATIC,
                     "Static",SS_LEFTNOWORDWRAP | WS_GROUP,9,26,271,8
     COMBOBOX        IDC_SAVE_AUTOSAVE_TYPE,254,4,71,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Autosave:",IDC_STATIC,218,6,33,8
     CONTROL         "Collapse multiple instances of the same line when saving timestamped lyrics",IDC_SAVE_MERGE_EQUIVALENT_LRC_LINES,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,58,252,10
-    CONTROL         "<a>Syntax help</a>",IDC_SAVE_SYNTAX_HELP,"SysLink",WS_TABSTOP,7,272,39,9
 END
 
 IDD_PREFERENCES_DISPLAY DIALOGEX 0, 0, 333, 287
@@ -182,8 +171,8 @@ IDD_PREFERENCES_SRC_METATAGS DIALOGEX 0, 0, 332, 288
 STYLE DS_SETFONT | WS_CHILD
 FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
-    LTEXT           "Tags to search (separated by a semicolon):",IDC_STATIC,7,72,136,8
-    EDITTEXT        IDC_SEARCH_TAGS,7,81,318,14,ES_AUTOHSCROLL
+    LTEXT           "Tags to search (separated by a semicolon):",IDC_STATIC,7,86,136,8
+    EDITTEXT        IDC_SEARCH_TAGS,7,95,318,14,ES_AUTOHSCROLL
     LTEXT           "Unsynced lyrics:",IDC_STATIC,31,19,52,8
     LTEXT           "Synced lyrics:",IDC_STATIC,37,37,44,8
     EDITTEXT        IDC_SAVE_TAG_UNSYNCED,89,16,82,14,ES_AUTOHSCROLL
@@ -192,6 +181,20 @@ BEGIN
     PUSHBUTTON      "?",IDC_SAVE_TAG_EXPLAIN,175,36,16,14
 END
 
+IDD_PREFERENCES_SRC_LOCALFILES DIALOGEX 0, 0, 332, 288
+STYLE DS_SETFONT | WS_CHILD
+FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
+BEGIN
+    EDITTEXT        IDC_SAVE_FILENAME_FORMAT,87,17,199,14,ES_AUTOHSCROLL
+    LTEXT           "Static",IDC_SAVE_FILE_NAME_PREVIEW,87,36,144,8,SS_ENDELLIPSIS
+    RTEXT           "File name format:",IDC_STATIC,25,20,59,10
+    COMBOBOX        IDC_SAVE_DIRECTORY_CLASS,87,57,199,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Storage directory:",IDC_STATIC,11,60,71,8
+    LTEXT           "Custom directory format:",IDC_STATIC,7,81,79,8
+    EDITTEXT        IDC_SAVE_CUSTOM_PATH,87,78,200,14,ES_AUTOHSCROLL
+    LTEXT           "Static",IDC_SAVE_CUSTOM_PATH_PREVIEW,87,100,202,8,SS_PATHELLIPSIS
+    PUSHBUTTON      "...",IDC_SAVE_CUSTOM_PATH_BROWSE,289,78,20,15
+    CONTROL         "<a>Syntax help</a>",IDC_SAVE_SYNTAX_HELP,"SysLink",WS_TABSTOP,7,272,39,9
 END
 
 
@@ -259,6 +262,13 @@ BEGIN
         BOTTOMMARGIN, 281
     END
 
+    IDD_PREFERENCES_SRC_LOCALFILES, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 325
+        TOPMARGIN, 4
+        BOTTOMMARGIN, 281
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -299,6 +309,11 @@ BEGIN
 END
 
 IDD_PREFERENCES_SRC_METATAGS AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_PREFERENCES_SRC_LOCALFILES AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
