--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -142,7 +142,7 @@ BEGIN
     LTEXT           "Image type:",IDC_STATIC,6,135,47,8
     CONTROL         "",IDC_BACKGROUND_IMG_OPACITY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,106,156,185,15
     LTEXT           "Background image opacity:",IDC_STATIC,6,159,87,8
-    LTEXT           "Image blur",IDC_STATIC,6,186,35,8
+    LTEXT           "Image blur:",IDC_STATIC,6,186,87,8
     CONTROL         "",IDC_BACKGROUND_GRADIENT_TL,"Button",BS_OWNERDRAW | WS_TABSTOP,189,55,50,14,WS_EX_CLIENTEDGE
     CONTROL         "",IDC_BACKGROUND_GRADIENT_TR,"Button",BS_OWNERDRAW | WS_TABSTOP,251,55,50,14,WS_EX_CLIENTEDGE
     CONTROL         "",IDC_BACKGROUND_GRADIENT_BL,"Button",BS_OWNERDRAW | WS_TABSTOP,189,76,50,14,WS_EX_CLIENTEDGE
@@ -152,8 +152,6 @@ BEGIN
     PUSHBUTTON      "...",IDC_BACKGROUND_CUSTOM_IMG_BROWSE,226,210,20,15
     CONTROL         "Maintain image aspect ratio",IDC_BACKGROUND_MAINTAIN_IMG_ASPECT_RATIO,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,193,134,103,10
-    CONTROL         "",IDC_BACKGROUND_BLUR_SPINNER,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_HOTTRACK,97,184,11,14
-    EDITTEXT        IDC_BACKGROUND_BLUR_EDIT,48,183,50,14,ES_AUTOHSCROLL
     LTEXT           "Fill type:",IDC_STATIC,6,23,42,8
     COMBOBOX        IDC_BACKGROUND_FILL_TYPE,47,20,111,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     GROUPBOX        "Gradient Colours",IDC_STATIC,181,42,125,55
@@ -162,6 +160,7 @@ BEGIN
     GROUPBOX        "Background colour",IDC_STATIC,0,0,323,100
     CONTROL         "External window background opaque",IDC_BACKGROUND_EXTWIN_OPAQUE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,249,134,10
+    CONTROL         "",IDC_BACKGROUND_BLUR_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,106,183,185,15
 END
 
 IDD_PREFERENCES_ROOT DIALOGEX 0, 0, 333, 287
