Allow configuring whether search prefers synced or unsynced lyrics
As discussed in #367

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -213,6 +213,8 @@ BEGIN
     EDITTEXT        IDC_SEARCH_SKIP_FILTER_OUTPUT,55,213,268,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED
     LTEXT           "Filter output:",IDC_STATIC,7,216,40,8
     LTEXT           "Filter result:",IDC_STATIC,7,237,36,8
+    COMBOBOX        IDC_SEARCH_PREFERRED_TYPE,75,24,83,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Preferred lyric type:",IDC_STATIC,7,26,61,8
 END
 
 
