--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -215,6 +215,8 @@ BEGIN
     LTEXT           "Filter result:",IDC_STATIC,7,237,36,8
     COMBOBOX        IDC_SEARCH_PREFERRED_TYPE,75,24,83,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Preferred lyric type:",IDC_STATIC,7,26,61,8
+    CONTROL         "Automatically search for lyrics when a new track starts, even when there are no visible openlyrics panels on the UI",IDC_SEARCH_WITHOUT_PANELS,
+                    "Button",BS_AUTOCHECKBOX | BS_TOP | BS_MULTILINE | WS_TABSTOP,7,44,199,20
 END
 
 IDD_PREFERENCES_UPLOADING DIALOGEX 0, 0, 332, 288
