--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,14 +27,11 @@ jobs:
           fetch-depth: 0  # Fetch all the history so that `git describe` works to generate the version header
           fetch-tags: true
 
-      - name: Print all available git tags
-        run: git tag --list
-
       - name: Check that tag description matches the release version
         continue-on-error: false  # The C++ compilation uses `git describe HEAD` while the release creation uses the tag given by the Github Actions trigger, these should match
         shell: bash
         run: |
-          tag_description=$(git describe HEAD)
+          tag_description=$(git describe --tags --first-parent HEAD)
           release_version="${GITHUB_REF#refs/tags/}"
           echo "Checking tag description \"$tag_description\" against release version \"$release_version\"..."
           if [ "$tag_description" == "$release_version" ]; then
