--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -157,6 +157,7 @@ FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
     CONTROL         "Debug logging enabled",IDC_DEBUG_LOGS_ENABLED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,4,89,10
     LTEXT           "Select a subpage for more options",IDC_STATIC,7,120,108,8
+    LTEXT           "For extra logs during startup, create a file named 'openlyrics-verbose-log.txt' in your foobar2000 config directory",IDC_STATIC,17,18,233,36,WS_DISABLED
 END
 
 IDD_PREFERENCES_SRC_METATAGS DIALOGEX 0, 0, 332, 288
