Add release builds to the push CI job

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Run tests
         run: build\Debug\test_foo_openlyrics.exe build\Debug\foo_openlyrics.dll
 
+      - name: Build release binaries
+        run: msbuild /r /m /p:Configuration=Release /p:Platform=x86 build\foo_openlyrics.sln
+
   build-and-test-64bit:
     name: Build & test - x64
     runs-on: windows-2022
@@ -58,3 +61,6 @@ jobs:
 
       - name: Run tests
         run: build\x64\Debug\test_foo_openlyrics.exe build\x64\Debug\foo_openlyrics.dll
+
+      - name: Build release binaries
+        run: msbuild /r /m /p:Configuration=Release /p:Platform=x64 build\foo_openlyrics.sln
